Note: version A.B.C corresponds to:
  A : the major version number of imcomp server
  B : the minor version number of imcomp server
  C : the version number for client user interfaces of imcomp and traherne

## [traherne-2.0.4] - February 20, 2019
 * users can upload and view TIF files (Traherne automatically converts TIF to JPEG and does not require browser's support for TIF images)
 * improved top toolbar (better organized and more clear)
 * Visualisation can now be saved as a JPEG image
 * Zoom and toggle settings update without requiring restart of zoom/toggle
 * Images can now be rotated and flipped by the user (if required)
 * Improved status messages

## [traherne-2.0.3] - March 06, 2018
 * web browser based interface for Traherne project
 * support for zoom and frozen zoom (for comparison)
 * support for toggle (with multiple speed)
 * all features that existed in [Traherne v1.3](http://www.robots.ox.ac.uk/~vgg/software/traherne/)
 
## [traherne-2.0.2] - Not Released
 * used for internal test by Traherne project
 
## [traherne-2.0.1] - Not Released
 * used for internal test by Traherne project