@@ -32,7 +32,7 @@
             <table>
               <tbody>
                 <tr><td><img src="img/traherne_logo.png"></td></tr>
-                <tr><td><div class="links">ver. <a target="_blank" href="https://gitlab.com/vgg/imcomp/blob/master/asset/imcomp/traherne/CHANGELOG">2.0.4</a></div></td></tr>
+                <tr><td><div class="links">version <a target="_blank" href="https://gitlab.com/vgg/imcomp/blob/master/asset/imcomp/traherne/CHANGELOG">2.0.5</a></div></td></tr>
                 <tr><td><div class="links"><a target="_blank" href="http://www.robots.ox.ac.uk/~vgg/software/traherne/help.html">help</a> | <a target="_blank" href="http://www.robots.ox.ac.uk/~vgg/software/traherne/index.html">about</a> | <a target="_blank" href="https://gitlab.com/vgg/imcomp/issues">report issue</a></div></td></tr>
               </tbody>
             </table>
