@@ -40,7 +40,7 @@ body {
     padding: 0.4%;
 }
 
-.top_panel { display:block; border:1px solid #9e9e9e; height:8em; overflow:hidden; }
+.top_panel { display:block; border:0px solid #9e9e9e; height:8em; overflow:hidden; }
 .top_panel .about { vertical-align:top; }
 .top_panel .about .links { font-size:0.7em; }
 
