@@ -6,7 +6,7 @@
 
 RELEASE_PACKAGE_NAME="Traherne"
 RELEASE_PACKAGE_DESCRIPTION="Traherne Digital Collator"
-IMCOMP_SERVER_VERSION_PATCH="4"
+IMCOMP_SERVER_VERSION_PATCH="5"
 
 BUILD_BASE_FOLDER="/Users/tlm/builds/imcomp"
 IMCOMP_SOURCE_PATH="/Users/tlm/dev/imcomp"
